# data_analyst

./: pyproject.toml
output/: analyst.py  analyst.py_design.md  app.py
output/templates/: index.html
src/analyst/: crew.py  main.py
src/analyst/config/: agents.yaml  tasks.yaml
